@@ -19,7 +19,6 @@
 package org.apache.tajo.master.event;
 
 public enum QueryEventType {
-  INIT,
   START,
   INIT_COMPLETED,
   INTERNAL_ERROR,
